# substreams-eth-evm-execution

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml  substreams.yaml
proto/contract/v1/: contract.proto
src/: lib.rs
src/pb/: contract.v1.rs
